--- a/Intro to Web Designing/Assignment3_2.html
+++ b/Intro to Web Designing/Assignment3_2.html
@@ -6,7 +6,7 @@
               border: 1px solid black;
               border-collapse: collapse;
               text-align: center;
-              padding: 0px 1px;
+              padding: 1px 1px;
             }
             table {
                 width: 100%;
@@ -37,7 +37,9 @@
                 <!-- Tuesday 1 -->
                 <td>
                     <table>
-                        <tr>SEME1040</tr>
+                        <tr>
+                            <td colspan="2">SEME1040</td>
+                        </tr>
                         <tr>
                             <td>HCM</td>
                             <td>C-207</td>
@@ -47,7 +49,7 @@
                 <!-- Wednesday 1-->
                 <td>
                     <table>
-                        <tr>SEIT1030</tr>
+                        <tr><td colspan="2">SEIT1030</td></tr>
                         <tr>
                             <td>KVS</td>
                             <td>C-207</td>
@@ -82,7 +84,7 @@
                 <!--Friday 1-->
                 <td>
                     <table>
-                        <tr>SESH1080</tr>
+                        <tr><td colspan="2">SESH1080</td></tr>
                         <tr>
                             <td>HSL</td>
                             <td>C-207</td>
@@ -127,7 +129,7 @@
                 <!-- Tuesday 2 -->
                 <td>
                     <table>
-                        <tr>SESH1080</tr>
+                        <tr><td colspan="2">SESH1080</td></tr>
                         <tr>
                             <td>HSL</td>
                             <td>C-207</td>
@@ -137,7 +139,7 @@
                 <!-- Wednesday 2-->
                 <td>
                     <table>
-                        <tr>SESH1210</tr>
+                        <tr><td colspan="2">SESH1210</td></tr>
                         <tr>
                             <td>DMJ</td>
                             <td>C-207</td>
@@ -149,7 +151,7 @@
                 <!--Friday 2-->
                 <td>
                     <table>
-                        <tr>SEIT1030</tr>
+                        <tr><td colspan="2">SEIT1030</td></tr>
                         <tr>
                             <td>KVS</td>
                             <td>C-207</td>
