--- a/Intro to Web Designing/Assignment3_1.html
+++ b/Intro to Web Designing/Assignment3_1.html
@@ -5,24 +5,52 @@
     <body>
         <table border="1">
             <tr>
-                <th>Sr. No.</th>
-                <th>Name</th>
-                <th>Enrollment No.</th>
+                <th>Item</th>
+                <th>Availabilty</th>
+                <th>Qty</th>
+                <th>Price</th>
             </tr>
             <tr>
+                <td>Don't Make Me Think by Steve Krug</td>
+                <td>In Stock</td>
                 <td>1</td>
-                <td>Name1</td>
-                <td>001</td>
+                <td>$30.02</td>
             </tr>
             <tr>
+                <td>A Project Guide to UX Design by Russ Unger & Carolyn Chandler</td>
+                <td>In Stock</td>
                 <td>2</td>
-                <td>Name2</td>
-                <td>002</td>
+                <td>$52.94 ($26.47 x 2)</td>
             </tr>
             <tr>
-                <td>3</td>
-                <td>Name3</td>
-                <td>003</td>
+                <td>Introduction HTML5 by Bruce Lawson & Remy Sharp</td>
+                <td>Out of Stock</td>
+                <td>1</td>
+                <td>$22.23</td>
+            </tr>
+            <tr>
+                <td>Bulletproof Web Design by Dan Cederholm</td>
+                <td>In Stock</td>
+                <td>1</td>
+                <td>$30.17</td>
+            </tr>
+            <tr>
+                <td>Subtotal</td>
+                <td></td>
+                <td></td>
+                <td>900</td>
+            </tr>
+            <tr>
+                <td>Tax</td>
+                <td></td>
+                <td></td>
+                <td>100</td>
+            </tr>
+            <tr>
+                <td>Grand Total</td>
+                <td></td>
+                <td></td>
+                <td>800</td>
             </tr>
         </table>
     </body>
