--- a/Intro to Web Designing/Assignment3_2.html
+++ b/Intro to Web Designing/Assignment3_2.html
@@ -17,6 +17,16 @@
         </style>
     </head>
     <body>
+        <table style="border: 0px;">
+            <tr>
+                <td>
+                    <img src="Image/ppsulogo.png" alt="">
+                </td>
+                <td>
+                    P P Savani School of Engineering Time Table
+                </td>
+            </tr>
+        </table>
         <table>
             <tr>
                 <th>Slot</th>
